# adventofcode2022

./: .gitignore  CMakeLists.txt  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  file.cpp  file.hpp  main.cpp
